Update installation guide